# Disease-Diagnosis-RAG-System

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TEAM.md  pyproject.toml
.github/workflows/: latex.yml
data/kb/: dedup_eval_log.md  icd10_audit.csv  icd10_audit.md  kb_build_log.md  kb_ddxplus.json  kb_ddxplus_rawq.json
docs/: QA_REPORT_Huong.md  README.md  architecture.mmd  ddxplus-index-mapping.md  technical-proposal.tex
docs/onboarding/: README.md  development-philosophy.md  getting-started.md  project-structure.md  roadmap-and-refactors.md
experiments/exp02/: .gitignore  README.md  eval_dense_hybrid.py  eval_retrieval.py
indices/diseases/: ddxplus_mapping.json  init_mapping.json
notebooks/: example.ipynb  exp02_live_eval.ipynb  ingestion_demo.ipynb  walkthrough.ipynb
report/: .gitignore  .latexmkrc  README.md  ai_conquer2026.cls  main.tex  references.bib  tvietlistings.sty
report/sections/: Abbreviations.tex  Abbreviations_standalone.tex  sec01_tomtat.tex  sec02_gioithieu.tex  sec03_baitoan.tex  sec04_relatedwork.tex  sec05_phuongphap.tex  sec06_experiments.tex  sec07_ketqua.tex  sec08-qa-huong.tex  sec08_ablation.tex  sec09_thaoluan.tex  sec10_loihanche.tex  sec11_phase2.tex  sec12_teamops.tex  sec13_tailap.tex  sec14_ketluan.tex
scripts/: build_icd10_reference.py  build_kb.py  dedup_eval.py
src/: logging.py  settings.py
src/migrations/: __init__.py  init_db.py  migrate_ddxplus_index.py
src/schemas/: __init__.py  base.py  opensearch_responses.py  search_pipelines.py
tests/: conftest.py
tests/rag/: conftest.py  ingest.py  (+4 more)
(+17 files in other folders)
