[project]
name = "disease-diagnosis-rag-system"
version = "0.1.0"
description = "Disease symptom prediction RAG system (AIO Module 1)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "structlog>=24.4.0",
    "pydantic-settings==2.14.1",
    "sentence-transformers>=3.0.0",
    "opensearch-py==3.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
